aout me+what I do

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,6 +25,21 @@
     font-size: 20px;
     border: none;
 }
+    .section-title{
+        font-size: 35px;
+        font-weight: bold;
+        color:#181818 ;
+    }
+    .section-description{
+        font-size: 18px;
+        color: #757575;
+    }
+    .secondary-bg{
+        background-color: #FFF8F3;
+    }
+    .text-center{
+        text-align: center;
+    }
 /* header */
 .header{
     background-image:url(../images/developer.png), url(../images/header_bg.png) ;
@@ -80,4 +95,38 @@
  }
  .banner-content{
     max-width: 580px;
+ }
+ /* mian styles */
+ main{
+    max-width: 1140px;
+    margin: 0 auto;
+ }
+ main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+ }
+
+ .about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+ }
+ .about-items{
+    display: flex;
+    justify-content: space-around;
+ }
+ .item-description{
+    font-weight: 600;
+}
+
+/* skills section styles
+ */
+ .skills-container{
+    display: flex;
+    gap: 24px;
+ }
+ .skill{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0px black;
  }
