after final practice

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -130,3 +130,27 @@
     padding: 30px;
     box-shadow: 0 6px 50px 0px black;
  }
+ /* resume section styles */
+ .resume-container{
+    display: flex;
+ }
+
+ /* footer styles */
+ footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+ }
+ .footer-column{
+    width: 50%;
+ }
+ footer input[type="text"], footer input[type="email"]{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+ }
